<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">The Traveller\'s Barometer</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_mode_default">Default mode</string>
    <string name="title_mode_calibration_altitude">Altitude calibration mode</string>

    <string name="text_pressure">Pressure:\ </string>
    <string name="value_pressure" translatable="false">_</string>
    <string name="unit_pressure" translatable="false">\ hPa</string>
    <string name="text_altitude">Altitude:\ </string>
    <string name="unknown_value" translatable="false">_</string>
    <string name="unit_altitude" translatable="false">"\ m"</string>
    <string name="hint_altitude">Your altitude</string>
    <string name="button_confirm">Confirm</string>
    <string name="text_pressure_sea_level">Pressure at sea level:\ </string>
    <string name="toast_altitude_calibrated">Altitude calibrated:\ </string>
    <string name="error_no_value_specified">Error: no value specified</string>

    <string name="key_pressure_sea_level_mode1" translatable="false">key_pressure_sea_level_mode1</string>
</resources>
