<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_pressure"
        android:textColor="@color/pressure"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/value_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/value_pressure"
        android:textColor="@color/pressure"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/text_pressure"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unit_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/unit_pressure"
        android:textColor="@color/pressure"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/value_pressure"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_mode0_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_mode_default"
        android:textColor="@color/title_mode"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_pressure" />

    <TextView
        android:id="@+id/text_altitude_mode0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/text_altitude"
        android:textColor="@color/altitude"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_mode0_default" />

    <TextView
        android:id="@+id/value_altitude_mode0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown_value"
        android:textColor="@color/altitude"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/text_altitude_mode0"
        app:layout_constraintTop_toBottomOf="@id/title_mode0_default" />

    <TextView
        android:id="@+id/unit_altitude_mode0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_altitude"
        android:textColor="@color/altitude"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/value_altitude_mode0"
        app:layout_constraintTop_toBottomOf="@id/title_mode0_default" />

    <TextView
        android:id="@+id/text_pressure_sea_level_mode0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/text_pressure_sea_level"
        android:textColor="@color/pressure"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_altitude_mode0" />

    <TextView
        android:id="@+id/value_pressure_sea_level_mode0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown_value"
        android:textColor="@color/pressure"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/text_pressure_sea_level_mode0"
        app:layout_constraintTop_toBottomOf="@id/text_altitude_mode0" />

    <TextView
        android:id="@+id/unit_pressure_sea_level_mode0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_pressure"
        android:textColor="@color/pressure"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/value_pressure_sea_level_mode0"
        app:layout_constraintTop_toBottomOf="@id/text_altitude_mode0" />

    <View
        android:id="@+id/divider_mode01"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_pressure_sea_level_mode0" />

    <TextView
        android:id="@+id/title_mode1_calibration_altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_mode_calibration_altitude"
        android:textColor="@color/title_mode"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_mode01" />

    <EditText
        android:id="@+id/field_altitude_calibration_mode1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="@string/hint_altitude"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/field_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_mode1_calibration_altitude" />

    <Button
        android:id="@+id/button_altitude_calibration_mode1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/button_confirm"
        app:layout_constraintTop_toBottomOf="@id/title_mode1_calibration_altitude"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_altitude_mode1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/text_altitude"
        android:textColor="@color/altitude"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/field_altitude_calibration_mode1" />

    <TextView
        android:id="@+id/value_altitude_mode1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown_value"
        android:textColor="@color/altitude"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/text_altitude_mode1"
        app:layout_constraintTop_toBottomOf="@id/field_altitude_calibration_mode1" />

    <TextView
        android:id="@+id/unit_altitude_mode1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_altitude"
        android:textColor="@color/altitude"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/value_altitude_mode1"
        app:layout_constraintTop_toBottomOf="@id/field_altitude_calibration_mode1" />

    <TextView
        android:id="@+id/text_pressure_sea_level_mode1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/text_pressure_sea_level"
        android:textColor="@color/pressure"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_altitude_mode1" />

    <TextView
        android:id="@+id/value_pressure_sea_level_mode1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown_value"
        android:textColor="@color/pressure"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/text_pressure_sea_level_mode1"
        app:layout_constraintTop_toBottomOf="@id/text_altitude_mode1" />

    <TextView
        android:id="@+id/unit_pressure_sea_level_mode1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_pressure"
        android:textColor="@color/pressure"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/value_pressure_sea_level_mode1"
        app:layout_constraintTop_toBottomOf="@id/text_altitude_mode1" />

</androidx.constraintlayout.widget.ConstraintLayout>
